// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a CheckboxBase in error 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-97 MuiCheckbox-root AbstractSwitchBase-error-root-89 AbstractSwitchBase-error-root-90 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    data-id="checkboxInput"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-100"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-113"
        data-id="IconCheckBoxOutlineBlankSharp"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`it renders a checked CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-53 MuiCheckbox-root AbstractSwitchBase-root-45 AbstractSwitchBase-root-46 MuiCheckbox-colorSecondary PrivateSwitchBase-checked-54 Mui-checked MuiIconButton-colorSecondary"
    data-id="checkboxInput"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        checked=""
        class="PrivateSwitchBase-input-56"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-69"
        data-id="IconCheckBoxSharp"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M21 3H3v18h18V3zM10 17l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;

exports[`it renders a disabled CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="true"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-141 MuiCheckbox-root AbstractSwitchBase-root-133 AbstractSwitchBase-root-134 MuiCheckbox-colorSecondary PrivateSwitchBase-disabled-143 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
    data-id="checkboxInput"
    tabindex="-1"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-144"
        data-indeterminate="false"
        disabled=""
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-157"
        data-id="IconCheckBoxOutlineBlankSharp"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`it renders an unchecked CheckboxBase 1`] = `
<div>
  <span
    aria-disabled="false"
    class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-9 MuiCheckbox-root AbstractSwitchBase-root-1 AbstractSwitchBase-root-2 MuiCheckbox-colorSecondary MuiIconButton-colorSecondary"
    data-id="checkboxInput"
  >
    <span
      class="MuiIconButton-label"
    >
      <input
        class="PrivateSwitchBase-input-12"
        data-indeterminate="false"
        id="checkboxInput"
        type="checkbox"
        value=""
      />
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root svg-icon-secondary-small-svg-icon-25"
        data-id="IconCheckBoxOutlineBlankSharp"
        focusable="false"
        role="presentation"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 5v14H5V5h14m2-2H3v18h18V3z"
        />
      </svg>
    </span>
    <span
      class="MuiTouchRipple-root"
    />
  </span>
</div>
`;
